tests/snapshots/integration__integration_tests__merge__step_squash_stage_tracked.snap
---
source: tests/integration_tests/merge.rs
info:
  program: wt
  args:
    - step
    - squash
    - "--stage=tracked"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_BIN: ""
    WORKTRUNK_COMMIT_GENERATION__ARGS: "squash: combined commits"
    WORKTRUNK_COMMIT_GENERATION__COMMAND: echo
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
---
success: true
exit_code: 0
----- stdout -----
🔄 [36mSquashing 2 commits & tracked changes into a single commit[0m (2 files, [32m+2[0m)...
💡 [2mBackup created @ [SHA][0m
🔄 [36mGenerating squash commit message...[0m
💡 [2m[2mUsing fallback commit message. Run 'wt config --help' for LLM setup guide[0m[0m
✅ [32mSquashed @ [2m[SHA][0m

----- stderr -----
[107m [0m  [1mSquash commits from main[0m
[107m [0m  
[107m [0m  Combined commits:
[107m [0m  - feat: add file 1
[107m [0m  - feat: add file 2
